Fix the mistaken spacing on event detail view

--- a/src/events/components/DetailView/detail.less
+++ b/src/events/components/DetailView/detail.less
@@ -13,6 +13,8 @@
 }
 
 .pictureCard {
+  .owCard();
+
   display: grid;
   background-color: white;
 }
@@ -22,11 +24,14 @@
 }
 
 .imageContainer {
-  padding: 2rem;
+  height: 100%;
+  img {
+    height: 100%;
+  }
 }
 
 .attendance {
-  padding: 2rem 2rem 2rem 0;
+  padding: 30px 30px 0 30px;
 }
 
 .block-grid {
@@ -45,8 +50,8 @@
 
 .container {
   display: grid;
-  grid-gap: 4rem;
-  margin-top: 4rem;
+  grid-gap: 40px;
+  margin-top: 40px;
 }
 
 .left-container {
@@ -56,7 +61,7 @@
 
 .right-container {
   display: grid;
-  grid-gap: 4rem;
+  grid-gap: 40px;
   margin-bottom: auto;
 }
 
@@ -113,7 +118,7 @@
 
 @media (min-width: 900px) {
   .pictureCard {
-    grid-template-columns: 3fr 2fr;
+    grid-template-columns: 53fr 33fr;
   }
 }
 
